2008-09-07  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>

	* src/asm-id.c: Added mneumonic descriptions.
	* Fixes SF bug #1875401.

2008-09-07  Onkar Shinde  <onkarshinde@gmail.com>
	* pixmaps/gnusim8085_icon.ico: Add icon for Windows
	* src/support.c: Additional logic for icon file lookup. Works when
	running directly from svn and also in Windows.
	* installer.nsi.in: Use .ico file as icon for installer. Use .ico
	instead of .png for menu shortcut.

2008-09-04  Onkar Shinde  <onkarshinde@gmail.com>
	* configure.in: Add installer.nsi.in
	* installer.nsi.in: Template for generating installer script to be
	used with NSIS.
	* WINDOWS-PORT.txt: Updated with status about installer.
	* configure, Makefile.in: Auto updated.

2008-09-03  Onkar Shinde  <onkarshinde@gmail.com>
	* configure.in: Update to check gtksourceview2 >= 2.2 and gtk >= 2.12.
	Also removed libgnomeui variables.
	* GNUSim8085.desktop.in: Fix some of the problems reported by
	desktop-file-validate.
	* Makefile.am: Install desktop file in universal location used by
	freedesktop specification.
	* WINDOWS-PORT.txt: Updated as per current status.
	* src/8085-instructions.h: Fix array overflow by incrasing array size.
	* src/asm-id.[c,h]: Add element in IdOpcode structure for description.
	* src/gui-editor.[c,h]: Move the gtksourceview2.
	* src/interface.c, src/gui-keypad.c: Move to new GtkToolTip api from
	gtk 2.12 for easy tooltip management.
	* src/Makefile.am: Replace gtksourceview cflags and libs with
	gtksourceview2.
	* data/8085asm.lang: Add an id for new search gtksourceview2 search
	api.
	* data/Makefile.am: Install .lang file in our own directory.
	* aclocal.m4, config.h.in, configure, Makefile.in, data/Makefile.in,
	doc/Makefile.in, pixmaps/Makefile.in, src/Makefile.in: Auto updated.

2008-08-28  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>
	* configure, Makefile.in, aclocal.m4, src/Makefile.in: Auto
	updated by autotools removing libgnomeui dep for Windows.